--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -152,6 +152,19 @@
     </div>
     {% endif %} -->
 
+    <div class="indicator-popup hidden">
+        <img class="task-indicator" onclick="onClickIndicator(this)" src="/static/img/task_empty.png" height="20" width="20">
+        <img class="task-indicator" onclick="onClickIndicator(this)" src="/static/img/task_done.png" height="20" width="20">
+        <img class="task-indicator" onclick="onClickIndicator(this)" src="/static/img/task_su.png" height="20" width="20">
+        <img class="task-indicator" onclick="onClickIndicator(this)" src="/static/img/task_m.png" height="20" width="20">
+        <img class="task-indicator" onclick="onClickIndicator(this)" src="/static/img/task_tu.png" height="20" width="20">
+        <img class="task-indicator" onclick="onClickIndicator(this)" src="/static/img/task_w.png" height="20" width="20">
+        <img class="task-indicator" onclick="onClickIndicator(this)" src="/static/img/task_th.png" height="20" width="20">
+        <img class="task-indicator" onclick="onClickIndicator(this)" src="/static/img/task_f.png" height="20" width="20">
+        <img class="task-indicator" onclick="onClickIndicator(this)" src="/static/img/task_sa.png" height="20" width="20">
+    </div>
+    <div class="indicator-arrow hidden"></div>
+
     <!-- MAIN -->
     <div id="body-container">
         <div id="card0">
