selecting a new indicator in the popup works in frontend

--- a/server/static/css/tasks.css
+++ b/server/static/css/tasks.css
@@ -90,6 +90,10 @@ hr {
     background-color: #f0f0f0;
 }
 
+.task-indicator {
+    cursor: pointer;
+}
+
 .column {
     flex: 25%;
     max-width: 25%;
