finished frontend for assigning tasks to days

--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -40,6 +40,12 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'OpenSans-Bold';
+    src: url('fonts/OpenSans-Bold.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
 
 /* ~~~~~ HEADER ~~~~~ */
 h5 {
