added option to clear all finished tasks in categories section

--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -240,6 +240,9 @@
         </div>
         <div id="card2">
             <div class="loader">Loading...</div>
+            <div>
+                <div class="clear-finished" onclick="clearFinishedTasks();">clear finished tasks</div>
+            </div>
             <div id="categories-wrapper" class="hidden">
                 <div class="column" id="col0"></div>
                 <div class="column" id="col1"></div>
