--- a/server/static/css/tasks.css
+++ b/server/static/css/tasks.css
@@ -59,7 +59,7 @@ hr {
 
 #card2 {
     width: 100%;
-    padding: 20px 20px;
+    padding: 10px 20px;
     background-color: #fff;
 }
 
@@ -71,6 +71,7 @@ hr {
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
+    width: 100%;
 }
 
 .task-indicator-wrapper {
@@ -175,4 +176,13 @@ hr {
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
     border-bottom: 10px solid #2d333c;
+}
+
+.clear-finished {
+    float: right;
+    clear: both;
+    font-family: OpenSans-Regular;
+    cursor: pointer;
+    text-decoration: underline;
+    color: #4286f4;
 }
