--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -240,8 +240,13 @@
         </div>
         <div id="card2">
             <div class="loader">Loading...</div>
-            <div>
-                <div class="clear-finished" onclick="clearFinishedTasks();">clear finished tasks</div>
+            <div class="card2-links hidden">
+                <div class="card2-link" onclick="clearFinishedTasks();">clear finished tasks</div>
+                |
+                <div class="card2-link" onclick="addCategory();">add category</div>
+                <!-- <div class="category-section-link" onclick="clearFinishedTasks();">clear finished tasks</div>
+                <div class=""
+                <div class="category-section-link" onclick="clearFinishedTasks();">clear finished tasks</div> -->
             </div>
             <div id="categories-wrapper" class="hidden">
                 <div class="column" id="col0"></div>
