add category now works

--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -243,7 +243,7 @@
             <div class="card2-links hidden">
                 <div class="card2-link" onclick="clearFinishedTasks();">clear finished tasks</div>
                 |
-                <div class="card2-link" onclick="addCategory();">add category</div>
+                <div class="card2-link" onclick="onClickAddCategory();">add category</div>
                 <!-- <div class="category-section-link" onclick="clearFinishedTasks();">clear finished tasks</div>
                 <div class=""
                 <div class="category-section-link" onclick="clearFinishedTasks();">clear finished tasks</div> -->
