--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -46,6 +46,12 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'AvenirNext-DemiBold';
+    src: url('fonts/AvenirNext-DemiBold.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
 
 /* ~~~~~ HEADER ~~~~~ */
 h5 {
