--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -152,18 +152,18 @@
     </div>
     {% endif %} -->
 
-    <div class="indicator-popup" style="display: none;">
-        <img class="task-indicator" onclick="onClickNewIndicator(this)" src="/static/img/task_empty.png" height="20" width="20">
-        <img class="task-indicator" onclick="onClickNewIndicator(this)" src="/static/img/task_done.png" height="20" width="20">
-        <img class="task-indicator" onclick="onClickNewIndicator(this)" src="/static/img/task_su.png" height="20" width="20">
-        <img class="task-indicator" onclick="onClickNewIndicator(this)" src="/static/img/task_m.png" height="20" width="20">
-        <img class="task-indicator" onclick="onClickNewIndicator(this)" src="/static/img/task_tu.png" height="20" width="20">
-        <img class="task-indicator" onclick="onClickNewIndicator(this)" src="/static/img/task_w.png" height="20" width="20">
-        <img class="task-indicator" onclick="onClickNewIndicator(this)" src="/static/img/task_th.png" height="20" width="20">
-        <img class="task-indicator" onclick="onClickNewIndicator(this)" src="/static/img/task_f.png" height="20" width="20">
-        <img class="task-indicator" onclick="onClickNewIndicator(this)" src="/static/img/task_sa.png" height="20" width="20">
+    <div class="popup-container hidden" onclick="closePopup();">
+        <div id="task-options-popup" class="options-popup" style="display: none;">
+            <img class="task-indicator clickable" onclick="onClickNewIndicator(this)" src="/static/img/task_su.png" height="20" width="20">
+            <img class="task-indicator clickable" onclick="onClickNewIndicator(this)" src="/static/img/task_m.png" height="20" width="20">
+            <img class="task-indicator clickable" onclick="onClickNewIndicator(this)" src="/static/img/task_tu.png" height="20" width="20">
+            <img class="task-indicator clickable" onclick="onClickNewIndicator(this)" src="/static/img/task_w.png" height="20" width="20">
+            <img class="task-indicator clickable" onclick="onClickNewIndicator(this)" src="/static/img/task_th.png" height="20" width="20">
+            <img class="task-indicator clickable" onclick="onClickNewIndicator(this)" src="/static/img/task_f.png" height="20" width="20">
+            <img class="task-indicator clickable" onclick="onClickNewIndicator(this)" src="/static/img/task_sa.png" height="20" width="20">
+        </div>
+        <div class="options-arrow" style="display: none;"></div>
     </div>
-    <div class="indicator-arrow" style="display: none;"></div>
 
     <!-- MAIN -->
     <div id="body-container">
