--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -154,6 +154,7 @@
 
     <div class="popup-container hidden" onclick="closePopup();">
         <div id="task-options-popup" class="options-popup" style="display: none;">
+            <img class="task-indicator clickable" onclick="onClickNewIndicator(this)" src="/static/img/task_empty.png" height="20" width="20">
             <img class="task-indicator clickable" onclick="onClickNewIndicator(this)" src="/static/img/task_su.png" height="20" width="20">
             <img class="task-indicator clickable" onclick="onClickNewIndicator(this)" src="/static/img/task_m.png" height="20" width="20">
             <img class="task-indicator clickable" onclick="onClickNewIndicator(this)" src="/static/img/task_tu.png" height="20" width="20">
