--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -170,7 +170,14 @@
         </div>
 
         <div id="cat-options-popup" class="options-popup" style="display: none;">
-            
+            <div class="color-selection">
+                <div class="color-row">
+                    <div class="color-option clickable" style="background-color: #ff0000" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #00ff00" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #0000ff" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #ffff00" onclick="selectCatColor(this)"></div>
+                </div>
+            </div>
             <div class="option clickable" onclick="onClickEditCat(this)">rename</div>
             <div class="option clickable" onclick="">delete (TODO)</div>
         </div>
