frontend changes for editing cat color

--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -172,6 +172,7 @@
         <div id="cat-options-popup" class="options-popup" style="display: none;">
             <div class="color-selection">
                 <div class="color-row">
+                    <div class="color-option clickable" style="background-color: #dddddd" onclick="selectCatColor(this)"></div>
                     <div class="color-option clickable" style="background-color: #ff0000" onclick="selectCatColor(this)"></div>
                     <div class="color-option clickable" style="background-color: #00ff00" onclick="selectCatColor(this)"></div>
                     <div class="color-option clickable" style="background-color: #0000ff" onclick="selectCatColor(this)"></div>
