added more colors

--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -175,11 +175,27 @@
             <div class="color-selection">
                 <div class="color-row">
                     <div class="color-option clickable" style="background-color: #dddddd" onclick="selectCatColor(this)"></div>
-                    <div class="color-option clickable" style="background-color: #ff0000" onclick="selectCatColor(this)"></div>
-                    <div class="color-option clickable" style="background-color: #00ff00" onclick="selectCatColor(this)"></div>
-                    <div class="color-option clickable" style="background-color: #0000ff" onclick="selectCatColor(this)"></div>
-                    <div class="color-option clickable" style="background-color: #ffff00" onclick="selectCatColor(this)"></div>
-                    <div class="color-option clickable" style="background-color: #ffff00" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #336359" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #a5f9a2" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #001b47" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #58e5f4" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #561377" onclick="selectCatColor(this)"></div>
+                </div>
+                <div class="color-row">
+                    <div class="color-option clickable" style="background-color: #f7be99" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #820f1e" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #a9b1f9" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #c44400" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #f9a9cf" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #2a5e00" onclick="selectCatColor(this)"></div>
+                </div>
+                <div class="color-row">
+                    <div class="color-option clickable" style="background-color: #e6ea77" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #ef3434" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #9e3491" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #00ce1b" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #0077ff" onclick="selectCatColor(this)"></div>
+                    <div class="color-option clickable" style="background-color: #fcc246" onclick="selectCatColor(this)"></div>
                 </div>
             </div>
         </div>
