--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -165,7 +165,7 @@
                 <img class="task-indicator clickable" onclick="onClickNewIndicator(this)" src="/static/img/task_sa.png" height="20" width="20">
             </div>
             <div class="option clickable" onclick="">edit (todo)</div>
-            <div class="option clickable" onclick="">delete (todo)</div>
+            <div class="option clickable" onclick="onClickDeleteTask()">delete</div>
             <div class="option clickable" onclick="">change category (todo)</div>
         </div>
 
