--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -298,11 +298,16 @@
                 <div class="column" id="col3"></div>
             </div>
         </div>
+        <div id="card3">
+            <div class="loader">Loading...</div>
+            <div id="tasks-completed-over-time"></div>
+        </div>
     </div>
 
     <!-- <div id="settings-dialog" tabindex="-1">
     </div> -->
 
+    <script src="{{ url_for('static', filename='js/highcharts.js') }}"></script>
     <script src="{{ url_for('static', filename='js/logout.js') }}"></script>
     <script src="{{ url_for('static', filename='js/util.js') }}"></script>
     <script src="{{ url_for('static', filename='js/tasks.js') }}"></script>
