--- a/server/static/css/tasks.css
+++ b/server/static/css/tasks.css
@@ -7,6 +7,16 @@
     align-items: flex-start;
 }
 
+#card3 {
+    width: 100%;
+    background-color: #3e3e40;
+    padding: 20px 20px;
+}
+
+body {
+    background-color: #3e3e40;
+}
+
 .day-container {
     flex-basis: 12.5%;
     margin: 0 2px;
