number of tasks completed by month

--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -301,6 +301,7 @@
         <div id="card3">
             <div class="loader">Loading...</div>
             <div id="tasks-completed-over-time"></div>
+            <div id="tasks-completed-per-month"></div>
         </div>
     </div>
 
