--- a/server/static/css/tasks.css
+++ b/server/static/css/tasks.css
@@ -189,7 +189,7 @@ hr {
 /* ~~~ MENU POPUP ~~~ */
 .options-popup {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     background-color: #2d333c;
     display: inline-block;
     padding: 10px 0px;
@@ -238,6 +238,15 @@ hr {
     width: 15px;
     height: 15px;
     border: 1px solid #fff;
+}
+
+.color-selection {
+    padding: 5px 10px 0px;
+}
+
+#jscolorButtonElem {
+    border: 2px solid black;
+    width: 60px;
 }
 /* ~~~~~~~~~ */
 
