--- a/server/static/css/tasks.css
+++ b/server/static/css/tasks.css
@@ -117,7 +117,7 @@ hr {
     border-bottom: 1px solid #ddd;
 }
 
-.cat-settings-wrapper {
+.cat-settings-wrapper .cat-move-wrapper {
     padding-bottom: 2px;
 }
 
@@ -286,4 +286,8 @@ hr {
     cursor: pointer;
     text-decoration: underline;
     color: #4286f4;
+}
+
+.cat-move-icon {
+    margin: 0px 0px 0px 5px;
 }
