tasks completed per week

--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -316,6 +316,7 @@
             <div class="loader">Loading...</div>
             <div id="tasks-completed-over-time"></div>
             <div id="tasks-completed-per-month"></div>
+            <div id="tasks-completed-per-week"></div>
         </div>
     </div>
 
