--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -152,6 +152,8 @@
     </div>
     {% endif %} -->
 
+    <div id="fail-bar" class="hidden"></div>
+
     <div class="popup-container hidden" onclick="onClickOffPopup(event);">
         <div id="cat-task-options-popup" class="options-popup" style="display: none;">
             <div class="dow-selection">
